// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component renders correctly 1`] = `
<div
  className="sc-bdVaJa kAYprr"
>
  <div
    className="sc-bwzfXH dcHuJA"
  />
</div>
`;

exports[`Modal component renders correctly when not set to show 1`] = `
<div
  className="sc-bdVaJa kWnJmF"
>
  <div
    className="sc-bwzfXH cdUXKa"
  />
</div>
`;
